crates/biome_cli/tests/snapshots/main_cases_monorepo/should_find_settings_when_targeting_parent_of_nested_dir.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/should_find_settings_when_targeting_parent_of_nested_dir/packages'
```

## `biome.jsonc`

```json
{
  "linter": {
    "includes": ["**/*.js"],
    "rules": {
      "correctness": { "noUnusedVariables": "off" },
      "suspicious": { "noDebugger": "off" }
    }
  }
}
```

## `packages/lib/biome.jsonc`

```json
{
  "extends": "//",
  "linter": {
    "rules": {
      "correctness": { "noUnusedVariables": "error" }
    }
  }
}
```

## `file.js`

```js
let a; debugger
```

## `packages/lib/file.js`

```js
let a; debugger
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
packages/lib/file.js:1:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This variable a is unused.
  
  > 1 │ let a; debugger
      │     ^
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend a with an underscore.
  
  - let·a;·debugger
  + let·_a;·debugger
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
