crates/biome_cli/tests/snapshots/main_cases_monorepo/should_ignore_nested_configuration_in_ignored_directory.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint
```

## `biome.jsonc`

```json
{
  "files": {
    "includes": ["**/*.js", "!vendor"]
  },
  "linter": {
    "rules": {
      "correctness": { "noUnusedVariables": "off" },
      "suspicious": { "noDebugger": "off" }
    }
  }
}
```

## `vendor/biome.jsonc`

```json
{
  "root": true,
  "linter": {
    "rules": {
      "correctness": { "noUnusedVariables": "error" }
    }
  }
}
```

## `file.js`

```js
let a; debugger
```

## `vendor/foo/file.js`

```js
let a; debugger
```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
