crates/biome_cli/tests/snapshots/main_cases_monorepo/should_not_lint_when_root_is_disabled_but_nested_is_enabled.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/should_not_lint_when_root_is_disabled_but_nested_is_enabled'
```

## `biome.json`

```json
{ "linter": { "enabled": false } }
```

## `packages/lib/biome.json`

```json
{ "extends": "//", "linter": { "enabled": true } }
```

## `file.js`

```js
debugger
```

## `packages/lib/file.js`

```js
debugger
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
packages/lib/file.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
  > 1 │ debugger
      │ ^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger
      │ --------

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 1 error.
```
