crates/biome_cli/tests/snapshots/main_cases_monorepo/when_run_from_child_biome_json_it_should_inherit_root_config.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `packages/lib/biome.json`

```json
{
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 8
  }
}
```

## `biome.json`

```json
{
  "root": true,
  "javascript": {
    "formatter": {
      "quoteStyle": "double"
    }
  }
}
```

## `file.js`

```js
function f() { const lorem_and_ipsum = 'lorem ipsum'; }
```

## `packages/lib/file.js`

```js
function f() { const lorem_and_ipsum = 'lorem ipsum'; }
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
packages/lib/biome.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - 
    2 1 │   {
    3   │ - ····"formatter":·{
    4   │ - ········"indentStyle":·"space",
    5   │ - ········"indentWidth":·8
    6   │ - ····}
      2 │ + ········"formatter":·{
      3 │ + ················"indentStyle":·"space",
      4 │ + ················"indentWidth":·8
      5 │ + ········}
    7 6 │   }
    8 7 │   
  

```

```block
packages/lib/file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - function·f()·{·const·lorem_and_ipsum·=·'lorem·ipsum';·}
      1 │ + function·f()·{
      2 │ + ········const·lorem_and_ipsum·=·"lorem·ipsum";
      3 │ + }
      4 │ + 
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 2 errors.
```
